[CSS overflow] Fix overflow x of div class 'page__related' when scrollbar of leftsidebar appeared.

--- a/_sass/custom/_mypage.scss
+++ b/_sass/custom/_mypage.scss
@@ -14,6 +14,12 @@
     }
 }
 
+.page__related {
+    @include breakpoint($large) {
+        width: calc(100% - #{$mysidebar-width} - 1em); // -1em from _mixins for padding of <div id='main'>.
+    }
+}
+
 /* Posting */
 .page__content {
     h1 {
